"""Update isbn field

Revision ID: cbf746de710d
Revises: a9d42f5cb7f1
Create Date: 2026-02-24 06:32:08.701071

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
import sqlmodel
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'cbf746de710d'
down_revision: Union[str, Sequence[str], None] = 'a9d42f5cb7f1'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_loans_book_uid'), table_name='loans')
    op.drop_index(op.f('ix_loans_borrowed_at'), table_name='loans')
    op.drop_index(op.f('ix_loans_member_uid'), table_name='loans')
    op.drop_index(op.f('ix_loans_uid'), table_name='loans')
    op.drop_table('loans')
    op.add_column('books', sa.Column('available_copies', sa.Integer(), nullable=False))
    op.drop_constraint(op.f('uq_books_isbn'), 'books', type_='unique')
    op.create_index(op.f('ix_books_isbn'), 'books', ['isbn'], unique=True)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_books_isbn'), table_name='books')
    op.create_unique_constraint(op.f('uq_books_isbn'), 'books', ['isbn'], postgresql_nulls_not_distinct=False)
    op.drop_column('books', 'available_copies')
    op.create_table('loans',
    sa.Column('uid', sa.UUID(), autoincrement=False, nullable=False),
    sa.Column('book_uid', sa.UUID(), autoincrement=False, nullable=False),
    sa.Column('member_uid', sa.UUID(), autoincrement=False, nullable=False),
    sa.Column('borrowed_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=False),
    sa.Column('due_date', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=False),
    sa.Column('reissued_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=True),
    sa.Column('returned_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=True),
    sa.Column('fine_amount', sa.NUMERIC(precision=10, scale=2), server_default=sa.text('0.00'), autoincrement=False, nullable=False),
    sa.Column('fine_grace_amount', sa.NUMERIC(precision=10, scale=2), server_default=sa.text('0.00'), autoincrement=False, nullable=False),
    sa.Column('created_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=True),
    sa.Column('updated_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=True),
    sa.ForeignKeyConstraint(['book_uid'], ['books.uid'], name=op.f('loans_book_uid_fkey')),
    sa.ForeignKeyConstraint(['member_uid'], ['members.uid'], name=op.f('loans_member_uid_fkey')),
    sa.PrimaryKeyConstraint('uid', name=op.f('loans_pkey')),
    sa.UniqueConstraint('book_uid', 'member_uid', name=op.f('uq_loans_book_member'), postgresql_include=[], postgresql_nulls_not_distinct=False)
    )
    op.create_index(op.f('ix_loans_uid'), 'loans', ['uid'], unique=True)
    op.create_index(op.f('ix_loans_member_uid'), 'loans', ['member_uid'], unique=False)
    op.create_index(op.f('ix_loans_borrowed_at'), 'loans', ['borrowed_at'], unique=False)
    op.create_index(op.f('ix_loans_book_uid'), 'loans', ['book_uid'], unique=False)
    # ### end Alembic commands ###
